corrected overflow on x-axis

--- a/css/site.css
+++ b/css/site.css
@@ -115,7 +115,7 @@ body
     }
 header
 {
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 150px;
   background: blue;
@@ -139,20 +139,23 @@ header img
   {
     position: absolute;
     top: 15px;
-    left: calc(100% - 55px);
-    width: 4%;
+    right: 0;
+    /* left: calc(100% - 55px); */
+    width: fit-content;
     min-height: 15px;
-    text-align: center;
+    /* text-align: center; */
   }
   .social
   {
     width: 50px;
     height: 40px;
     margin: 0 auto;
+    display: block;
   }
   #hammenu
   {
     display: none;
+    padding: 0 11px;
     position: absolute;
   }
     #drpdwn
@@ -439,7 +442,7 @@ nav
   }
   #hammenu
   {
-    left: calc(100% - 44px);
+    right: 0;
     display: block;
     font-size: 2em;
   }
